force-app/main/default/objects/blng__BalanceSnapShotScheduler__c/blng__BalanceSnapShotScheduler__c.object-meta.xml
<CustomObject>
    <label>Balance Snapshot Scheduler</label>
    <nameField>
        <label>Balance Snapshot Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance Snapshot Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>