force-app/main/default/objects/blng__BalanceSnapShotScheduler__c/fields/blng__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDateTime__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>